--- a/vignettes/_sporeg_workflow.Rmd
+++ b/vignettes/_sporeg_workflow.Rmd
@@ -3,7 +3,7 @@ title: "sporeg Intended Workflow"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{sporeg Intended Workflow}
-  %\VignetteEngine{knitr::rmarkdown}
+  %\VignetteEngine{knitr::rmarkdown_notangle}
   %\VignetteEncoding{UTF-8}
 ---
 
